--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
 
 * { box-sizing: border-box; }
 
+body {
+    font-family: sans-serif;
+}
+
 .notice {
     background-color: lightblue;
     padding: 1rem;
@@ -49,8 +53,8 @@
     align-self: center;
 }
 
-body {
-    font-family: sans-serif;
+@media (max-width: 30rem) {
+    .notice { display: none; }
 }
 
 p {
